Feat/add send email message (#25)
* add filter options - frontend

* adjust code

* adjust filter

* add email service

* adjust backend
