# backend/app-store/src/client/openapi.yaml
@@ -554,8 +554,6 @@ paths:
       responses:
         "204":
           description: NO CONTENT
-      security:
-      - user: []
   /store/addProductToBucket:
     post:
       tags:
@@ -578,8 +576,6 @@ paths:
           description: NO CONTENT
         "304":
           description: NOT MODIFIED
-      security:
-      - user: []
   /store/create/order:
     post:
       tags:
@@ -609,8 +605,6 @@ paths:
                   bucketId:
                     format: int64
                     type: integer
-      security:
-      - user: []
   /store/create/person:
     post:
       tags:
@@ -643,8 +637,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/AddressDTO'
-      security:
-      - user: []
   /store/forgotPassword:
     patch:
       tags:
@@ -677,8 +669,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/AddressDTO'
-      security:
-      - user: []
   /store/removeOpinion:
     post:
       tags:
@@ -694,8 +684,6 @@ paths:
       responses:
         "204":
           description: NO CONTENT
-      security:
-      - user: []
   /store/removeProductFromBucket:
     post:
       tags:
@@ -711,8 +699,6 @@ paths:
       responses:
         "204":
           description: NO CONTENT
-      security:
-      - user: []
   /store/updatePersonAddress:
     patch:
       tags:
@@ -746,8 +732,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/AddressDTO'
-      security:
-      - user: []
 components:
   schemas:
     Address:
